--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,8 @@
         "ext-ldap": "*"
     },
     "require-dev": {
-        "phpunit/phpunit": "4.6.*",
-        "mockery/mockery": "0.9.*"
+        "codeception/codeception": "*",
+        "yiisoft/yii2-coding-standards": "*"
     },
     "autoload": {
         "psr-4": {
