--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -4,3 +4,11 @@ checks:
 filter:
     excluded_paths:
         - tests/*
+
+tools:
+    #external_code_coverage:
+    #    timeout: 2100 # Timeout in seconds.
+    # disable copy paste detector and similarity analyzer as they have no real value
+    # and a huge bunch of false-positives
+    php_sim: false
+    php_cpd: false
