--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -1,5 +1,10 @@
+imports:
+    - php
+
 checks:
-    php: true
+    php:
+        code_rating: true
+        duplication: true
 
 filter:
     excluded_paths:
