--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         }
     ],
     "require": {
-        "php": ">=5.6",
+        "php": ">=7.0",
         "yiisoft/yii2": "*",
         "ext-ldap": "*"
     },
@@ -27,7 +27,7 @@
     },
     "autoload": {
         "psr-4": {
-            "chrmorandi\\ldap\\": ""
+            "chrmorandi\\ldap\\": "src"
         }
     }
 }
