--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     }],
     "autoload": {
         "psr-4": {
-            "chrmorandi\\ldap\\": "src"
+            "chrmorandi\\ldap\\": "src/"
         }
     }
 }
