--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,8 @@
     "homepage": "http://chrmorandi.github.io/yii2-ldap/",
     "authors": [{"name": "Christopher Mota","email": "chrmorandi@gmail.com"}],
     "require": {
-        "php": ">=7.0",
-        "yiisoft/yii2": "~2.0.14",
+        "php": ">=7.3",
+        "yiisoft/yii2": "*",
         "ext-ldap": "*"
     },
     "require-dev": {
